--- a/config/app_config.yml
+++ b/config/app_config.yml
@@ -1,9 +1,11 @@
 development: &non_production_settings
+  domain: trackdons.local
   site_url: en.trackdons.local
   english_website_url: en.trackdons.local
   spanish_website_url: es.trackdons.local
 
 production: &production_settings
+  domain: trackdons.org
   site_url: en.trackdons.org
   english_website_url: en.trackdons.org
   spanish_website_url: es.trackdons.org
