--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -19,4 +19,10 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: 1111111111111111111111111111111111111111111111111111111
+  mandrill_smtp_address: smtp.example.com
+  mandrill_smtp_port: 587
+  mandrill_smtp_domain: wadus.com
+  mandrill_smtp_username: wadus@example.com
+  mandrill_smtp_password: supersecretkey
+  rollbar_access_token: 1111111111112222222222233333333333333
