--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: ruby
+addons:
+  postgresql: "9.3"
 rvm:
   - 2.1.5
   - 2.1.2
 before_script:
   - "for i in config/*.example; do cp \"$i\" \"${i/.example}\"; done"
+  - psql -c 'create database trackdons_test;' -U postgres
+  - cp config/database.yml.travis config/database.yml
+
