--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -3,7 +3,7 @@ development:
   encoding: unicode
   database: trackdons_development
   pool: 5
-  username: fernando
+  username: postgres
   password:
 
 test:
@@ -11,5 +11,5 @@ test:
   encoding: unicode
   database: trackdons_test
   pool: 5
-  username: fernando
+  username: postgres
   password:
