--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_script:
   - "for i in config/*.example; do cp \"$i\" \"${i/.example}\"; done"
   - psql -c 'create database trackdons_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
-
+after_success:
+  - curl -XPOST -H "Authorization: Token token="$DEPLOY_BOT_TOKEN $DEPLOY_URL
