--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
   - psql -c 'create database trackdons_test;' -U postgres
   - cp config/database.yml.travis config/database.yml
 after_success:
-  - curl -XPOST -H "Authorization: Token token="$DEPLOY_BOT_TOKEN $DEPLOY_URL
+  - "curl -XPOST -H \"Authorization: Token token=\"$DEPLOY_BOT_TOKEN $DEPLOY_URL"
